--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,11 +2,10 @@
     <string name="app_name">BatTextR</string>
     <string name="action_settings">Settings</string>
 
-    <string name="save_alerts_file">savedAlerts</string>
-
     <!-- SQL Database strings -->
     <string name="sql_database_name">BatTextR_DB</string>
     <string name="sql_table_name">alerts</string>
+    <string name="sql_column_alert_id">_id</string>
     <string name="sql_column_contact_name">contactName</string>
     <string name="sql_column_contact_name_type">TEXT</string>
     <string name="sql_column_contact_detail">contactDetail</string>
