Added switches to each contact to turn off or on

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,5 +34,7 @@
     <string name="sql_column_alert_type_type">TEXT</string>
     <string name="sql_column_alert_detail">alertDetail</string>
     <string name="sql_column_alert_detail_type">INT</string>
+    <string name="sql_column_alert_isOn">isOn</string>
+    <string name="sql_column_alert_isOn_type">INT</string>
 
 </resources>
